--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-midnight
+title: Welcome to Matt's homepage!
+description: Feel free to bookmark this to keep an eye on my project updates.  I'm sure they'll be awesome once I figure out what the hell I'm doing.  
